--- a/docs/features.adoc
+++ b/docs/features.adoc
@@ -1,35 +1,55 @@
 
+
 * Entry point
-** stdin
-** file
-*** rel
-*** abs
-*** ./...
-
-* Inheritance
-** external (file-level)
-** internal (node-level)
-
-* Node generation
-** normal file
-** private nodes
-** script output
-
-*** Missing
+** Source
+*** stdin
+*** file
+**** rel
+**** abs
+**** ./...
+** Presence
+*** Absent
+*** Present
+** Validity
 *** Malformed
 *** Invalid
 *** Valid
+** Type
+*** Object
+*** Array
+*** Text
+*** Number
+*** Boolean
+*** null
+** File Level Inheritance
+*** None
+*** Single
+*** Multiple
+** Node Level Inheritance
+*** None
+*** Single
+*** Multiple
+** # of Node Level Inheritances
+*** None
+*** 1
+*** 2...
 
-* Inheritance Multiplicity
-** Single
-** Multiple
+* Inheritee Node
+** Generation Method
+*** File node
+*** Private (local) node
+*** Script rendered node
+** Presence
+** Validity
+** Type
+** File Level Inheritance
+** Node Level Inheritance
+** # of Node Level Inheritance
 
-* Layer
-** Single
-** Multi
 
-* Templating
-** Enabled
-*** self
-*** ref
-** Disabled
+== Terminology update
+
+`$private` -> `$local`
+
+external inheritance -> File Level Inheritance
+internal inheritance -> Node Level Inheritance
