--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,86 +1,61 @@
-= jq-front: JSON with inheritance and templating
+:toc:
+
+= `jq-front`: JSON with inheritance and templating
 
 `jq-front` is a simple tool to give your JSON files a power of inheritance and templating.
-It was named after *Cfront*<<Cfront>>, which is an old component of {cpp} language and converts {cpp} source code into C source code.
-
-== Background and Introduction
+It was named after *Cfront*<<Cfront>>, which is an old component of {cpp} language that converts {cpp} source code into C language.
 
 Despite that there are criticisms to use JSON<<json>> as system configuration information's format<<cr>>, JSON still has its beauty such as rich tool supports, good balance between machine's and human's readability and writability, clarity and simplicity in syntax, etc.
 
 However, surely it has some weaknesses when we try to define data structure.
 For instance, under a situation, where we need to generate similar but slightly different system configurations repeatedly, it is quite difficult to remove redundant pieces since JSON itself does not define anything about relationships between files or nodes inside files.footnote:[This is not merely a weakness of JSON but also other notations even YAML. YAML has a way to reference another object node from one, still it cannot embed a string value of a text node in another by itself.]
 
-`jq-front` is a tool to cope with such challenges by introducing inheritance and templating into JSON files.
+== Environment variables
 
-== Installation
+You can control behaviours of `jq-front` by setting environment variables described in this section.
 
-=== Ubuntu
-Place the file `jq-front` somewhere on your `PATH`.
-Followings will be required by `jq-front`
+=== JF_PATH
 
-* `jq`
-* `bash`
-* `npm`
-  ** `ajv-cli`
+From directories listed in `JF_PATH`, `jq-front` searches for requested file.
+Entries in the variable is separated by colons(`:`).
 
-=== With Docker
-Add a following entry to your `.bashrc` or a file sourced through it.
+When it is searching for a file during node-level inheritance resolution, it first searches for local node directory, which is created for temporarily, and if nothing is found, it will then traverses the variable.
 
-[source, bash]
-include::../jq-front_aliases[]
+==== Default value
+
+`.`
+
+=== JF_TEMPLATING_ENABLED
+
+You can enable `jq-front` 's templating feature by setting this environment variable's value to `yes`.
+If any other value is set to the variable, it will not be executed.
+
+==== Default value
+
+`yes`
 
 
+=== JF_DEBUG
 
-== Usage
+If this variable is set to `enabled`, debug information will be printed to `stderr`.
 
-```sh
-jq-front [-h|--help] [-e|--enable-templating] [-d|--disable-templating] [--validation=no|strict|lenient] [TARGET]
-```
+==== Default value
+`disabled`
 
-=== Example
-
-Let's prepare files from which you want to create a new JSON by extending them.
-
-```sh
-$ echo '{"yourname":"Mark"}' > name.json
-$ cat name.json
-{"yourname":"Mark"}
-
-$ echo '{"greeting":"Hello"}' > greeting.json
-$ cat greeting.json
-{"greeting":"Hello"}
-```
-
-Now, let's try `jq-front`.
-```sh
-$ echo '{
-    "$extends": [
-      "greeting.json",
-      "name.json"
-    ],
-    "sayHello": "$(ref .greeting), $(ref .yourname). Toady is $(date). How are you doing?"
-  }
-  ' | jq-front
-  {
-    "yourname": "Mark",
-    "greeting": "Hello",
-    "sayHello": "Hello, Mark. Toady is Fri Aug 30 22:04:40 UTC 2019. How are you doing?"
-  }
-$
-```
-Doesn't it seem useful? Have fun!
 
 == Features
 
 With `jq-front`, you can build a JSON object reusing other JSON objects.
 To specify JSON objects to be referenced, `jq-front` searches for keys which have special names in a given object.
-`$extends` and `$private` are keywords used for this purpose.
+`$extends` and `$local` are keywords used for this purpose.
 
 Basic features offered by the product are following
 
-* External Inheritance
-* Internal Inheritance
+* File-level Inheritance
+* Node-level Inheritance
+* Script-output Inheritance
 * Templating
+* Validation
 
 And usage of them will be discussed in this section.
 
@@ -99,7 +74,7 @@ include::examples/B.json[]
 [source, json]
 include::examples/T.json[]
 
-=== External Inheritance
+=== File-level Inheritance
 
 In programming languages, inheritance is an indispensable technique to reuse a component.
 `jq-front` offers it for the purpose.
@@ -122,7 +97,7 @@ jq-front I.json
 
 
 [source, json]
-.External Inheritance output
+.File-level Inheritance output
 ----
 {
   "a": "A",
@@ -147,7 +122,7 @@ When both `A.json` and `B.json` have attributes at the same path, `A.json` side'
 That is, `J.json` will be rendered into following output.
 
 [source, json]
-.External Multiple Inheritance output
+.File-level Multiple Inheritance output
 ----
 {
   "a": "A",
@@ -173,7 +148,7 @@ JSON objects that are inherited can also inherit some other JSON files.
 That is, `K.json` is rendered into a following JSON file.
 
 [source, json]
-.External Inheritance output (2)
+.File-level Inheritance output (2)
 ----
 {
   "a": "A",
@@ -187,10 +162,10 @@ CAUTION: Ensure that inheritance hierarchy does not have any cyclic dependencies
 Behaviour for this situation is not defined and it will result in stack overflow.
 
 
-=== Internal Inheritance
+=== Node-level Inheritance
 
-"Internal Inheritance" refers to an inheritance happens on an internal (object) node of a given JSON file.
-Although it is implemented as a separate mechanism from the external one as it will be discussed in "Design" section, it behaves almost the same as the "external" one.
+"Node-level Inheritance" refers to an inheritance happens on an internal (object) node of a given JSON file.
+Although it is implemented as a separate mechanism from the file-level one as it will be discussed in "Design" section, it behaves almost the same as the "file-level" one.
 
 [source, json]
 .L.json
@@ -204,7 +179,7 @@ Although it is implemented as a separate mechanism from the external one as it w
 ----
 
 [source, json]
-.Internal Inheritance output
+.Node-level Inheritance output
 ----
 {
   "a": {
@@ -214,15 +189,15 @@ Although it is implemented as a separate mechanism from the external one as it w
 }
 ----
 
-As it worked for External Inheritance, multiple inheritance works also for Internal Inheritance.
+As it worked for File-level Inheritance, multiple inheritance works also for Node-level Inheritance.
 
-However, for internal nodes, you can also reference "private" nodes not only external files.
+However, for internal nodes, you can also reference "local" nodes not only external files.
 
 [source, json]
 .P.json
 ----
 {
-  "$private": {
+  "$local": {
     "nodeA": {
        "aa": "aa"
     },
@@ -236,12 +211,12 @@ However, for internal nodes, you can also reference "private" nodes not only ext
 }
 ----
 
-These nodes can be referenced through "internal inheritance feature" as shown in the example.
+These nodes can be referenced through "node-level inheritance feature" as shown in the example.
 Note that you do not need to specify `.json` extension.
 And `P.json` will result in following output.
 
 [source, json]
-.Private Node Inheritance output
+.Local Node Inheritance output
 ----
 {
   "a": {
@@ -330,38 +305,6 @@ This function can only work from inside "Work(2)" file.
   * A path to "Work(2)" file.
 
 
-=== Environment variables
-
-You can control behaviours of `jq-front` by setting environment variables described in this section.
-
-==== JF_PATH
-
-From directories listed in `JF_PATH`, `jq-front` searches for requested file.
-Entries in the variable is separated by colons(`:`).
-
-When it is searching for a file during internal inheritance resolution, it first searches for private node directory, which is created for temporarily, and if nothing is found, it will then traverses the variable.
-
-===== Default value
-
-`.`
-
-==== JF_TEMPLATING_ENABLED
-
-You can enable `jq-front` 's templating feature by setting this environment variable's value to `yes`.
-If any other value is set to the variable, it will not be executed.
-
-===== Default value
-
-`yes`
-
-
-==== JF_DEBUG
-
-If this variable is set to `enabled`, debug information will be printed to `stderr`.
-
-===== Default value
-`disabled`
-
 == Design
 
 Following is a diagram that illustrates `jq-front` 's processing pipeline design.
@@ -370,16 +313,16 @@ Following is a diagram that illustrates `jq-front` 's processing pipeline design
 .jq-front's pipeline
 ----
 
-          external inheritance             private node materialization
+          file-level inheritance             local node materialization
                  +----+                             +-----+
    +-------------+ {o}+-=----------+   +------------+ {o} +-=------------+
    |             +----+            |   |            +-----+              | 0...n
    V                               V   V                                 V
 +------+                         +-------+                         +------------+
-|Source|                         |Work(1)|                         |PrivateNodes|
+|Source|                         |Work(1)|                         |LocalNodes|
 |{d}   |                         |{d}    |                         |{d}         |
 +------+                         +-------+                         +------------+
-                                     ^        internal inheritance       ^
+                                     ^        node-level inheritance       ^
                                      |              +-----+              |
                                      +--------------+ {o} +--------------+
                                                     +--+--+
@@ -406,34 +349,34 @@ Following is a diagram that illustrates `jq-front` 's processing pipeline design
 
 ----
 
-As shown, it consists of four main components, which are "external inheritance", "private node materialization", "internal inheritance", and "templating".
+As shown, it consists of four main components, which are "file-level inheritance", "local node materialization", "node-level inheritance", and "templating".
 
 Designs of those components will be described in the rest of this section.
 
-=== External inheritance
+=== File-level Inheritance
 
-'External inheritance' composes a new JSON file from a given one by expanding the files provided through the top-level `$extends` attribute.
+'File-level Inheritance' composes a new JSON file from a given one by expanding the files provided through the top-level `$extends` attribute.
 
 At the end of this process, the attribute is removed and copied to the output, "Work(1)" in the diagram.
 
-=== Private node materialization
+=== Local node Materialization
 
-If the file, "Work(1)" has `$private` attribute whose value is an object node, nodes associated with keys under the attribute are dumped under a temporary directory.
-The temporary directory is called 'private node directory'.
-The 'private node directory' and its contents are utilized by the "internal inheritance' mechanism.
+If the file, "Work(1)" has `$local` attribute whose value is an object node, nodes associated with keys under the attribute are dumped under a temporary directory.
+The temporary directory is called 'local node directory'.
+The 'local node directory' and its contents are utilized by the "node-level inheritance' mechanism.
 
-=== Internal inheritance
+=== Node-level Inheritance
 
-Internal inheritance mechanism is a bit more complicated than the external one.
+Node-level Inheritance mechanism is a bit more complicated than the file-level one.
 
 1. Create a base JSON object by the following procedure.
     a. Scan paths of all internal nodes.
     b. For each path, if it ends with `"$extends"`, expand the files specified by the attribute.
     c. Assign the JSON node created in step b. to the parent of the `$extends` attribute.
 2. Overlay the JSON object created in the step. 1 with an original JSON object.
-3. Remove nodes, i.e., `$extends` and `$private` nodes from the JSON object created in the step 2.
+3. Remove nodes, i.e., `$extends` and `$local` nodes from the JSON object created in the step 2.
 
-'Private node directory' is inserted before the first entry of `JF_PATH` environment variable when a file to be expanded is searched during the step 1. b.
+'Local node directory' is inserted before the first entry of `JF_PATH` environment variable when a file to be expanded is searched during the step 1. b.
 
 === Templating
 
@@ -446,26 +389,16 @@ echo {CONTENT OF Work(2)}
 And this causes expansions of bash expressions inside the content of "Work(2)" and that expanded string will be printed by the `echo` command.
 
 
-=== Limitations and Future Work
+== Limitations and Future Work
 
 * Cyclic dependencies are not checked and such a model will result in a stack-overflow.
 * Handling of characters that need escaping on templating is naive.
 
-== Authors
-
-* **Hrioshi Ukai** - *Initial work* - https://github.com/dakusui[dakusui]
-
-== link:../LICENSE[License]
-
-[source, text]
-----
-include::../LICENSE[]
-----
-
 [bibliography]
 == References
 
-- [[[Cfront, 1]]] https://en.wikipedia.org/wiki/Cfront[Cfront]: 2019
-- [[[cr, 2]]] Thayne McCombs. https://www.lucidchart.com/techblog/2018/07/16/why-json-isnt-a-good-configuration-language/[Why JSON isn’t a Good Configuration Language]: 2018.
-- [[[yaml, 3]]] en.wikipedia.org. https://en.wikipedia.org/wiki/YAML[YAML]: 2019
-- [[[json, 4]]] json.org. http://www.json.org/[JSON]:2019
+- [[jq-front, 1]] jq-front project in github.org. https://github.com/dakusui/jq-front[jq-front]: 2019
+- [[[Cfront, 2]]] Cfront article in en.wikipedia.org. https://en.wikipedia.org/wiki/Cfront[Cfront]: 2019
+- [[[cr, 3]]] Thayne McCombs. https://www.lucidchart.com/techblog/2018/07/16/why-json-isnt-a-good-configuration-language/[Why JSON isn’t a Good Configuration Language]: 2018.
+- [[[yaml, 4]]] YAML article in en.wikipedia.org. https://en.wikipedia.org/wiki/YAML[YAML]: 2019
+- [[[json, 5]]] json.org. http://www.json.org/[JSON]:2019
