--- a/docs/features.adoc
+++ b/docs/features.adoc
@@ -1,55 +1,295 @@
+== Environment variables
+
+You can control behaviours of `jq-front` by setting environment variables described in this section.
+
+=== JF_PATH
+
+From directories listed in `JF_PATH`, `jq-front` searches for requested file.
+Entries in the variable are separated by colons(`:`).
+
+When it is searching for a file during node-level inheritance resolution, it first searches for local node directory, which is created for temporarily, and if nothing is found, it will then traverses the variable.
+
+==== Default value
+
+`.`
+
+=== JF_TEMPLATING_ENABLED
+
+You can enable `jq-front` 's templating feature by setting this environment variable's value to `yes`.
+If any other value is set to the variable, it will not be executed.
+
+==== Default value
+
+`yes`
 
 
-* Entry point
-** Source
-*** stdin
-*** file
-**** rel
-**** abs
-**** ./...
-** Presence
-*** Absent
-*** Present
-** Validity
-*** Malformed
-*** Invalid
-*** Valid
-** Type
-*** Object
-*** Array
-*** Text
-*** Number
-*** Boolean
-*** null
-** File Level Inheritance
-*** None
-*** Single
-*** Multiple
-** Node Level Inheritance
-*** None
-*** Single
-*** Multiple
-** # of Node Level Inheritances
-*** None
-*** 1
-*** 2...
+=== JF_DEBUG
 
-* Inheritee Node
-** Generation Method
-*** File node
-*** Private (local) node
-*** Script rendered node
-** Presence
-** Validity
-** Type
-** File Level Inheritance
-** Node Level Inheritance
-** # of Node Level Inheritance
+If this variable is set to `enabled`, debug information will be printed to `stderr`.
+
+==== Default value
+`disabled`
 
 
-== Terminology update
+== Features
 
-`$private` -> `$local`
+With `jq-front`, you can build a JSON object reusing other JSON objects.
+To specify JSON objects to be referenced, `jq-front` searches for keys which have special names in a given object.
+`$extends` and `$local` are keywords used for this purpose.
 
-external inheritance -> File Level Inheritance
-internal inheritance -> Node Level Inheritance
+Basic features offered by the product are following
+
+* File-level Inheritance
+* Node-level Inheritance
+* Script-output Inheritance
+* Templating
+* Validation
+
+And usage of them will be discussed in this section.
+
+In this section, we introduce features of the product using following data.
+
+* link:examples/A.json[A.json]
+[source, json]
+include::examples/A.json[]
+* link:examples/AA.json[AA.json]
+[source, json]
+include::examples/AA.json[]
+* link:examples/B.json[B.json]
+[source, json]
+include::examples/B.json[]
+* link:examples/T.json[T.json]
+[source, json]
+include::examples/T.json[]
+
+=== File-level Inheritance
+
+In programming languages, inheritance is an indispensable technique to reuse a component.
+`jq-front` offers it for the purpose.
+A usage example is as follows.
+
+[source, json]
+.I.json
+----
+{
+  "$extends": [ "A.json" ],
+  "o": "hello world"
+}
+----
+
+----
+jq-front I.json
+----
+
+`I.json` will be rendered into the following JSON object with this command line.
+
+
+[source, json]
+.File-level Inheritance output
+----
+{
+  "a": "A",
+  "o": "hello world"
+}
+----
+
+As you see in the example, the attribute `o` whose value is set to `"A"` in `A.json`, is overridden by the value in `I.json`.
+
+Multiple inheritance is also supported by `jq-front`.
+Just by listing file names of JSONs to be inherited, multiple inheritance happens, like `"$extends": ["A.json", "B.json"]`.
+When both `A.json` and `B.json` have attributes at the same path, `A.json` side's value will be used.
+
+[source, json]
+.J.json
+----
+{
+  "$extends": [ "A.json", "B.json" ]
+}
+----
+
+That is, `J.json` will be rendered into following output.
+
+[source, json]
+.File-level Multiple Inheritance output
+----
+{
+  "a": "A",
+  "b": "B",
+  "o": "A"
+}
+----
+
+As it is so in normal programming language that supports multiple inheritance, avoiding diamond inheritance is a good idea.
+Multiple inheritance was implemented to cope with a situation where you want to reuse two JSON objects defined for completely different purposes.
+For instance, one is for authentication information and the other is for GUI flavor.
+
+JSON objects that are inherited can also inherit some other JSON files.
+
+[source, json]
+.K.json
+----
+{
+  "$extends": [ "AA.json", "B.json" ]
+}
+----
+
+That is, `K.json` is rendered into a following JSON file.
+
+[source, json]
+.File-level Inheritance output (2)
+----
+{
+  "a": "A",
+  "aa": "AA",
+  "b": "B",
+  "o": "A"
+}
+----
+
+CAUTION: Ensure that inheritance hierarchy does not have any cyclic dependencies.
+Behaviour for this situation is not defined and it will result in stack overflow.
+
+
+=== Node-level Inheritance
+
+"Node-level Inheritance" refers to an inheritance happens on an internal (object) node of a given JSON file.
+Although it is implemented as a separate mechanism from the file-level one as it will be discussed in "Design" section, it behaves almost the same as the "file-level" one.
+
+[source, json]
+.L.json
+----
+{
+  "a": {
+    "$extends": [ "A.json" ],
+    "a": "L"
+  }
+}
+----
+
+[source, json]
+.Node-level Inheritance output
+----
+{
+  "a": {
+    "a": "L",
+    "o": "A"
+  }
+}
+----
+
+As it worked for File-level Inheritance, multiple inheritance works also for Node-level Inheritance.
+
+However, for internal nodes, you can also reference "local" nodes not only external files.
+
+[source, json]
+.P.json
+----
+{
+  "$local": {
+    "nodeA": {
+       "aa": "aa"
+    },
+    "nodeB": {
+    }
+  },
+  "a": {
+    "$extends": ["nodeA"],
+    "a": "a"
+  }
+}
+----
+
+These nodes can be referenced through "node-level inheritance feature" as shown in the example.
+Note that you do not need to specify `.json` extension.
+And `P.json` will result in following output.
+
+[source, json]
+.Local Node Inheritance output
+----
+{
+  "a": {
+    "aa": "aa",
+    "a": "a"
+  }
+}
+----
+
+=== Templating
+
+Sometimes we need to compose a value of text node from a value of another.
+Following is a such an example.
+
+[source, json]
+.Version file
+----
+{
+  "releaseVersion": "2.12.0",
+  "snapshotVersion": "2.12.0-SNAPSHOT"
+}
+----
+
+In this example, the version to be released next is `2.12.0`, however the version under the development for it has a suffix `-SNAPSHOT`
+
+To follow the principle of D-R-Y, how should we fix it?
+Templating is a feature to offer a solution to this challenge.
+
+We can describe this relationship by using the templating feature of `jq-front`.
+
+[source, json]
+.T.json
+----
+{
+  "releaseVersion": "2.12.0",
+  "snapshotVersion": "$(ref .releaseVersion)-SNAPSHOT"
+}
+----
+
+Once you render this file with `jq-front`, you will get the first file (Version file).
+
+`$ref` is a built-in function of `jq-front`, which expands the value of the node specified by the path given as an argument.
+Not only built-in functions but also any commands (bash expressions) valid on a platform on which `jq-front` is running can be used here.
+
+For instance, following is a valid input to `jq-front`.
+[source, json]
+----
+{
+  "releaseVersion": "2.12.0",
+  "snapshotVersion": "$(ref .releaseVersion)-$(date \"+%Y-%m-%d\")"
+}
+----
+
+And this will result in an output below.
+[source, json]
+----
+{
+  "releaseVersion": "2.12.0",
+  "snapshotVersion": "2.12.0-2019-08-28"
+}
+----
+
+This feature can be disabled by `-d` (`--disable-templating`) option.
+And to enable it explicitly, you can use `-e` (`--enable-templating`) in case `JF_TEMPLATING_ENABLED` is set to `no`.
+
+==== Built-in `jq-front` functions
+
+===== `ref` function
+
+A function that returns a value of a node specified by an argument.
+This function can only work from inside "Work(2)" file.
+
+- parameter:
+* `_path`: path to a node in the file "Work(2)"
+- returned value:
+* A value of a node specified by `_path`
+
+
+===== `self` function
+
+A function that returns a path to a file "Work(2)"
+This function can only work from inside "Work(2)" file.
+
+- parameter: (none)
+- returned value:
+* A path to "Work(2)" file.
+
+
