Improve reference logic so that users do not need to care about the order nodes are evaluated (templated).

--- a/docs/features.adoc
+++ b/docs/features.adoc
@@ -261,6 +261,8 @@ This function can only work from inside "Work(2)" file.
 
 === Script Inheritance
 
+Experimental.
+
 (t.b.d.)
 
 === Yaml file inheritance
